CHANGELOG jdbcmetrics

version  0.9.7
--------------------------


version  0.9.6
--------------------------
* Fixed calculation of the timer, was wrong before. Now both read-timer & write-timer will work.

version  0.9.5
--------------------------
* Fixed defect: The read time was categorised as a JDBC write, that is wrong.
* Connection pools stats are now categorised as reads or writes.
* Code cleanup.
* Debug log setup for com.soulgalore.jdbcmetrics.proxy.StatementInvocationHandler that will log every proxied query.

version  0.9.4
--------------------------
* Only log when queries are executed, meaning accessing a page that don't do a database query will not result in any log

version  0.9.3
--------------------------
* Make it possible to use Metrics default MetricRegistry

version	 0.9.2
--------------------------
* Fixed defect when casting the driver

version	 0.9.1
--------------------------
* Introduced the changelog
* Made the MetricsRegistry public availiable

version	 0.9
--------------------------
* Initial release